--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DarkPlan Pro Planner</title>
-    <link rel="icon" type="image/x-icon" href="https://icons8.com/icon/stY0JkZlRMg7/plannero">
+    <link rel="icon" type="image/png" href="https://img.icons8.com/fluency/48/calendar-external-link.png">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <style>
         :root {
