--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DarkPlan Pro Planner</title>
+    <title>DarkPlanner</title>
     
     <link rel="icon" type="image/png" href="https://img.icons8.com/pulsar-line/48/ffffff/calendar.png">
     
@@ -207,7 +207,7 @@
 
 <script>
     // 1. Setup Data Storage
-    let planners = JSON.parse(localStorage.getItem('myPlanners')) || ['Grades', 'Games'];
+    let planners = JSON.parse(localStorage.getItem('myPlanners')) || ['Grades', 'Game Realeses'];
     let entries = JSON.parse(localStorage.getItem('myEntries')) || [];
     let activePlanner = planners[0];
 
