--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
     <style>
         :root {
             --bg-dark: #121212;
@@ -34,12 +36,10 @@
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             background-color: var(--bg-dark);
             color: var(--text-main);
-            height: 100vh;
             height: 100dvh;
-            overflow: hidden; /* Prevent body bounce */
+            overflow: hidden;
         }
 
-        /* Full Page Layout */
         #app {
             display: flex;
             flex-direction: column;
@@ -47,17 +47,17 @@
             width: 100%;
         }
 
-        /* Top Navigation (Horizontal for Mobile/Full Page) */
+        /* FIX: Added safe-area-inset-top to avoid Dynamic Island */
         #nav-bar {
             background-color: var(--sidebar-bg);
             border-bottom: 1px solid var(--border);
             padding: 10px;
+            padding-top: max(10px, env(safe-area-inset-top)); 
             display: flex;
             align-items: center;
             gap: 10px;
             overflow-x: auto;
             white-space: nowrap;
-            /* Hide scrollbar but keep functionality */
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
@@ -81,30 +81,29 @@
         }
 
         #add-list-btn {
-            padding: 8px 12px;
-            color: var(--text-dim);
+            padding: 8px 15px;
+            color: var(--text-main);
             font-weight: bold;
+            font-size: 20px;
             cursor: pointer;
         }
 
-        /* Main Content Area */
         #content {
             flex: 1;
             overflow-y: auto;
-            padding: 15px;
-            padding-bottom: 100px; /* Space for footer */
+            padding: 20px;
+            padding-bottom: 120px;
         }
 
         .section-label {
-            font-size: 12px;
+            font-size: 11px;
             text-transform: uppercase;
             color: var(--text-dim);
-            letter-spacing: 1px;
+            letter-spacing: 1.2px;
             margin-bottom: 15px;
             display: block;
         }
 
-        /* Card Styling */
         .entry-card {
             background: var(--bg-card);
             border: 1px solid var(--border);
@@ -114,10 +113,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            animation: fadeIn 0.3s ease;
         }
-
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(5px); } to { opacity: 1; transform: translateY(0); } }
 
         .entry-info b { display: block; font-size: 16px; margin-bottom: 4px; }
         .entry-info span { font-size: 13px; color: var(--text-dim); }
@@ -132,16 +128,16 @@
             font-weight: bold;
         }
 
-        /* Fixed Bottom Input Footer */
         #footer {
             position: fixed;
             bottom: 0;
             width: 100%;
             background: rgba(18, 18, 18, 0.95);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(15px);
+            -webkit-backdrop-filter: blur(15px);
             border-top: 1px solid var(--border);
             padding: 15px;
+            /* FIX: Ensure footer respects the bottom home bar */
             padding-bottom: max(15px, env(safe-area-inset-bottom));
         }
 
@@ -155,28 +151,26 @@
             border: 1px solid var(--border);
             color: white;
             padding: 12px;
-            border-radius: 8px;
-            font-size: 16px; /* Prevents zoom */
+            border-radius: 10px;
+            font-size: 16px;
             flex: 1;
         }
 
-        #itemDate { flex: 0.6; }
+        #itemDate { flex: 0.7; }
 
         .save-btn {
             background: var(--text-main);
             color: black;
             border: none;
-            padding: 0 20px;
-            border-radius: 8px;
+            padding: 0 18px;
+            border-radius: 10px;
             font-weight: bold;
-            font-size: 14px;
         }
 
-        /* Desktop specific tweaks */
         @media (min-width: 768px) {
-            #nav-bar { padding: 15px 10%; }
-            #content { padding: 30px 10%; }
-            #footer { padding: 20px 10%; }
+            #nav-bar { padding-left: 15%; padding-right: 15%; }
+            #content { padding-left: 15%; padding-right: 15%; }
+            #footer { padding-left: 15%; padding-right: 15%; }
         }
     </style>
 </head>
@@ -209,7 +203,6 @@
     const daysOfWeek = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
 
     function renderApp() {
-        // Render Tabs
         const tabsCont = document.getElementById('planner-tabs');
         tabsCont.innerHTML = '';
         planners.forEach(p => {
@@ -222,7 +215,6 @@
 
         document.getElementById('list-name-label').innerText = activePlanner;
 
-        // Render Tasks
         const list = document.getElementById('task-list');
         list.innerHTML = '';
         
@@ -230,7 +222,7 @@
         activeEntries.sort((a, b) => new Date(a.date) - new Date(b.date));
 
         if (activeEntries.length === 0) {
-            list.innerHTML = `<div style="text-align:center; color:var(--text-dim); margin-top:40px;">No entries yet</div>`;
+            list.innerHTML = `<div style="text-align:center; color:var(--text-dim); margin-top:60px; font-size:14px;">No items in this list</div>`;
         }
 
         activeEntries.forEach((entry) => {
@@ -264,11 +256,9 @@
     }
 
     function removeEntry(id) {
-        if(confirm("Delete this entry?")) {
-            entries = entries.filter(e => e.id !== id);
-            localStorage.setItem('myEntries', JSON.stringify(entries));
-            renderApp();
-        }
+        entries = entries.filter(e => e.id !== id);
+        localStorage.setItem('myEntries', JSON.stringify(entries));
+        renderApp();
     }
 
     function createNewPlanner() {
