--- a/index.html
+++ b/index.html
@@ -12,19 +12,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-
     <style>
         :root {
             --bg-dark: #121212;
             --bg-card: #1e1e1e;
             --sidebar-bg: #181818;
-            --header-bg: #1e1e1e;
             --border: #2a2a2a;
             --text-main: #ffffff;
             --text-dim: #888888;
             --accent: #333333;
-            --accent-hover: #444444;
             --danger: #ff5555;
         }
 
@@ -33,7 +29,7 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
             background-color: var(--bg-dark);
             color: var(--text-main);
             height: 100dvh;
@@ -44,21 +40,19 @@
             display: flex;
             flex-direction: column;
             height: 100%;
-            width: 100%;
         }
 
-        /* FIX: Added safe-area-inset-top to avoid Dynamic Island */
+        /* Top Nav - Clears Dynamic Island */
         #nav-bar {
             background-color: var(--sidebar-bg);
             border-bottom: 1px solid var(--border);
             padding: 10px;
-            padding-top: max(10px, env(safe-area-inset-top)); 
+            padding-top: max(12px, env(safe-area-inset-top)); 
             display: flex;
             align-items: center;
             gap: 10px;
             overflow-x: auto;
             white-space: nowrap;
-            -ms-overflow-style: none;
             scrollbar-width: none;
         }
         #nav-bar::-webkit-scrollbar { display: none; }
@@ -80,26 +74,19 @@
             border-color: var(--border);
         }
 
-        #add-list-btn {
-            padding: 8px 15px;
-            color: var(--text-main);
-            font-weight: bold;
-            font-size: 20px;
-            cursor: pointer;
-        }
-
+        /* Task Content Area */
         #content {
             flex: 1;
             overflow-y: auto;
             padding: 20px;
-            padding-bottom: 120px;
+            /* Extra bottom padding to ensure list items aren't hidden by the footer */
+            padding-bottom: 180px; 
         }
 
         .section-label {
             font-size: 11px;
             text-transform: uppercase;
             color: var(--text-dim);
-            letter-spacing: 1.2px;
             margin-bottom: 15px;
             display: block;
         }
@@ -125,24 +112,29 @@
             padding: 8px 12px;
             border-radius: 8px;
             font-size: 12px;
-            font-weight: bold;
         }
 
+        /* CENTERED FOOTER UI */
         #footer {
             position: fixed;
             bottom: 0;
-            width: 100%;
-            background: rgba(18, 18, 18, 0.95);
-            backdrop-filter: blur(15px);
-            -webkit-backdrop-filter: blur(15px);
+            left: 0;
+            right: 0;
+            background: rgba(20, 20, 20, 0.96);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
             border-top: 1px solid var(--border);
             padding: 15px;
-            /* FIX: Ensure footer respects the bottom home bar */
-            padding-bottom: max(15px, env(safe-area-inset-bottom));
+            padding-bottom: max(20px, env(safe-area-inset-bottom));
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 12px;
         }
 
-        .input-group {
+        .input-row {
             display: flex;
+            width: 100%;
             gap: 10px;
         }
 
@@ -156,21 +148,24 @@
             flex: 1;
         }
 
-        #itemDate { flex: 0.7; }
+        #itemDate { flex: 1; }
 
         .save-btn {
-            background: var(--text-main);
-            color: black;
+            background: #ffffff;
+            color: #000000;
             border: none;
-            padding: 0 18px;
-            border-radius: 10px;
+            padding: 14px;
+            width: 80%; /* Centered and prominent */
+            max-width: 300px;
+            border-radius: 12px;
             font-weight: bold;
+            font-size: 15px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
         }
 
-        @media (min-width: 768px) {
-            #nav-bar { padding-left: 15%; padding-right: 15%; }
-            #content { padding-left: 15%; padding-right: 15%; }
-            #footer { padding-left: 15%; padding-right: 15%; }
+        .save-btn:active {
+            transform: scale(0.98);
+            background: #e0e0e0;
         }
     </style>
 </head>
@@ -179,7 +174,7 @@
 <div id="app">
     <div id="nav-bar">
         <div id="planner-tabs" style="display: flex; gap: 8px;"></div>
-        <div id="add-list-btn" onclick="createNewPlanner()">+</div>
+        <div style="padding: 0 10px; color: var(--text-dim); font-size: 20px;" onclick="createNewPlanner()">+</div>
     </div>
 
     <div id="content">
@@ -188,11 +183,11 @@
     </div>
 
     <div id="footer">
-        <div class="input-group">
-            <input type="text" id="itemName" placeholder="New entry...">
+        <div class="input-row">
+            <input type="text" id="itemName" placeholder="Task name...">
             <input type="date" id="itemDate">
-            <button class="save-btn" onclick="saveEntry()">Add</button>
         </div>
+        <button class="save-btn" onclick="saveEntry()">Add Entry</button>
     </div>
 </div>
 
@@ -221,10 +216,6 @@
         const activeEntries = entries.filter(e => e.type === activePlanner);
         activeEntries.sort((a, b) => new Date(a.date) - new Date(b.date));
 
-        if (activeEntries.length === 0) {
-            list.innerHTML = `<div style="text-align:center; color:var(--text-dim); margin-top:60px; font-size:14px;">No items in this list</div>`;
-        }
-
         activeEntries.forEach((entry) => {
             const dateObj = new Date(entry.date + 'T00:00:00');
             const dayName = daysOfWeek[dateObj.getDay()];
@@ -247,7 +238,7 @@
     function saveEntry() {
         const name = document.getElementById('itemName').value;
         const date = document.getElementById('itemDate').value;
-        if(!name || !date) return;
+        if(!name || !date) return alert("Fill out both fields!");
         const newEntry = { id: Date.now().toString(), name, date, type: activePlanner };
         entries.push(newEntry);
         localStorage.setItem('myEntries', JSON.stringify(entries));
