--- a/index.html
+++ b/index.html
@@ -42,19 +42,24 @@
             height: 100%;
         }
 
+        /* Top Nav - Safe from Dynamic Island */
         #nav-bar {
             background-color: var(--sidebar-bg);
             border-bottom: 1px solid var(--border);
-            padding: 10px;
+            padding: 10px 15px;
             padding-top: max(12px, env(safe-area-inset-top)); 
             display: flex;
             align-items: center;
-            gap: 10px;
+            justify-content: space-between;
+        }
+
+        #planner-tabs {
+            display: flex;
+            gap: 8px;
             overflow-x: auto;
-            white-space: nowrap;
             scrollbar-width: none;
         }
-        #nav-bar::-webkit-scrollbar { display: none; }
+        #planner-tabs::-webkit-scrollbar { display: none; }
 
         .nav-tab {
             padding: 8px 16px;
@@ -63,29 +68,20 @@
             color: var(--text-dim);
             font-size: 14px;
             font-weight: 600;
-            cursor: pointer;
-            border: 1px solid transparent;
+            white-space: nowrap;
         }
 
         .nav-tab.active {
             background: var(--accent);
             color: white;
-            border-color: var(--border);
         }
 
+        /* Main Content */
         #content {
             flex: 1;
             overflow-y: auto;
             padding: 20px;
-            padding-bottom: 200px; 
-        }
-
-        .section-label {
-            font-size: 11px;
-            text-transform: uppercase;
-            color: var(--text-dim);
-            margin-bottom: 15px;
-            display: block;
+            padding-bottom: 220px; /* Room for the floating footer */
         }
 
         .entry-card {
@@ -108,69 +104,44 @@
             border: none;
             padding: 8px 12px;
             border-radius: 8px;
-            font-size: 12px;
         }
 
-        /* FIXED CENTERED FOOTER */
+        /* FLOATING FOOTER FIX */
         #footer {
             position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: rgba(20, 20, 20, 0.98);
-            backdrop-filter: blur(25px);
-            -webkit-backdrop-filter: blur(25px);
-            border-top: 1px solid var(--border);
-            padding: 20px; /* More padding for a cleaner look */
-            padding-bottom: max(25px, env(safe-area-inset-bottom));
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 15px;
-        }
-
-        /* Centered Input container with width limits */
-        .input-container {
-            width: 100%;
-            max-width: 400px; 
+            bottom: 20px; /* Lifted off the bottom edge */
+            bottom: calc(20px + env(safe-area-inset-bottom)); /* Lifted + Safe Area */
+            left: 50%;
+            transform: translateX(-50%);
+            width: 90%;
+            max-width: 400px;
+            background: rgba(30, 30, 30, 0.95);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            border: 1px solid var(--border);
+            border-radius: 20px;
+            padding: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
             display: flex;
             flex-direction: column;
             gap: 10px;
+            z-index: 100;
         }
 
         .input-row {
             display: flex;
-            gap: 10px;
-            width: 100%;
+            gap: 8px;
         }
 
         input {
-            background: var(--bg-card);
+            background: #121212;
             border: 1px solid var(--border);
             color: white;
             padding: 12px;
-            border-radius: 10px;
+            border-radius: 12px;
             font-size: 16px;
             flex: 1;
-        }
-
-        /* Date input specific fix */
-        input[type="date"] {
-            position: relative;
-            min-height: 45px;
-        }
-
-        /* Adds a "Date" label for mobile date inputs that look empty */
-        input[type="date"]::before {
-            content: "Date";
-            position: absolute;
-            color: var(--text-dim);
-            left: 12px;
-        }
-
-        input[type="date"]:focus::before,
-        input[type="date"]:valid::before {
-            content: "";
+            min-width: 0; /* Prevents overflow */
         }
 
         .save-btn {
@@ -178,39 +149,34 @@
             color: #000000;
             border: none;
             padding: 14px;
-            width: 100%; 
             border-radius: 12px;
             font-weight: bold;
             font-size: 15px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.4);
         }
 
-        .save-btn:active {
-            transform: scale(0.96);
-        }
+        .save-btn:active { transform: scale(0.97); }
+
     </style>
 </head>
 <body>
 
 <div id="app">
     <div id="nav-bar">
-        <div id="planner-tabs" style="display: flex; gap: 8px;"></div>
-        <div style="padding: 0 10px; color: var(--text-dim); font-size: 20px;" onclick="createNewPlanner()">+</div>
+        <div id="planner-tabs"></div>
+        <div style="color: var(--text-dim); font-size: 24px; padding-left: 10px;" onclick="createNewPlanner()">+</div>
     </div>
 
     <div id="content">
-        <span class="section-label" id="list-name-label">Current List</span>
+        <span style="font-size: 11px; text-transform: uppercase; color: var(--text-dim); display: block; margin-bottom: 15px;" id="list-name-label">List</span>
         <div id="task-list"></div>
     </div>
 
     <div id="footer">
-        <div class="input-container">
-            <div class="input-row">
-                <input type="text" id="itemName" placeholder="Task name...">
-                <input type="date" id="itemDate" required>
-            </div>
-            <button class="save-btn" onclick="saveEntry()">Add Entry</button>
+        <div class="input-row">
+            <input type="text" id="itemName" placeholder="Task...">
+            <input type="date" id="itemDate">
         </div>
+        <button class="save-btn" onclick="saveEntry()">Add Entry</button>
     </div>
 </div>
 
