--- a/index.html
+++ b/index.html
@@ -33,17 +33,14 @@
             background-color: var(--bg-dark);
             color: var(--text-main);
             height: 100dvh;
+            display: flex;
+            flex-direction: column;
             overflow: hidden;
         }
 
-        #app {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-        }
-
-        /* Top Nav - Safe from Dynamic Island */
+        /* Top Nav - Clears Dynamic Island */
         #nav-bar {
+            flex-shrink: 0;
             background-color: var(--sidebar-bg);
             border-bottom: 1px solid var(--border);
             padding: 10px 15px;
@@ -76,12 +73,13 @@
             color: white;
         }
 
-        /* Main Content */
+        /* List Area */
         #content {
-            flex: 1;
+            flex-grow: 1;
             overflow-y: auto;
             padding: 20px;
-            padding-bottom: 220px; /* Room for the floating footer */
+            /* Padding at the bottom so last items aren't hidden by the footer bar */
+            padding-bottom: 180px; 
         }
 
         .entry-card {
@@ -104,44 +102,37 @@
             border: none;
             padding: 8px 12px;
             border-radius: 8px;
+            font-size: 12px;
         }
 
-        /* FLOATING FOOTER FIX */
+        /* ANCHORED BOTTOM FOOTER */
         #footer {
-            position: fixed;
-            bottom: 20px; /* Lifted off the bottom edge */
-            bottom: calc(20px + env(safe-area-inset-bottom)); /* Lifted + Safe Area */
-            left: 50%;
-            transform: translateX(-50%);
-            width: 90%;
-            max-width: 400px;
-            background: rgba(30, 30, 30, 0.95);
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
-            border: 1px solid var(--border);
-            border-radius: 20px;
-            padding: 15px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+            flex-shrink: 0;
+            background: rgba(24, 24, 24, 0.98);
+            border-top: 1px solid var(--border);
+            padding: 15px 20px;
+            /* This pushes the content just above the physical home bar */
+            padding-bottom: max(15px, env(safe-area-inset-bottom));
             display: flex;
             flex-direction: column;
-            gap: 10px;
-            z-index: 100;
+            gap: 12px;
+            width: 100%;
         }
 
         .input-row {
             display: flex;
-            gap: 8px;
+            gap: 10px;
         }
 
         input {
-            background: #121212;
+            background: #000;
             border: 1px solid var(--border);
             color: white;
             padding: 12px;
-            border-radius: 12px;
+            border-radius: 10px;
             font-size: 16px;
             flex: 1;
-            min-width: 0; /* Prevents overflow */
+            min-width: 0;
         }
 
         .save-btn {
@@ -149,18 +140,19 @@
             color: #000000;
             border: none;
             padding: 14px;
-            border-radius: 12px;
+            border-radius: 10px;
             font-weight: bold;
-            font-size: 15px;
+            font-size: 16px;
+            width: 100%;
         }
 
-        .save-btn:active { transform: scale(0.97); }
+        .save-btn:active { background: #ccc; }
 
     </style>
 </head>
 <body>
 
-<div id="app">
+<div id="app" style="height: 100%; display: flex; flex-direction: column;">
     <div id="nav-bar">
         <div id="planner-tabs"></div>
         <div style="color: var(--text-dim); font-size: 24px; padding-left: 10px;" onclick="createNewPlanner()">+</div>
@@ -173,10 +165,10 @@
 
     <div id="footer">
         <div class="input-row">
-            <input type="text" id="itemName" placeholder="Task...">
+            <input type="text" id="itemName" placeholder="Task name...">
             <input type="date" id="itemDate">
         </div>
-        <button class="save-btn" onclick="saveEntry()">Add Entry</button>
+        <button class="save-btn" onclick="saveEntry()">Save Entry</button>
     </div>
 </div>
 
