--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
             background-color: var(--bg-dark);
             color: var(--text-main);
             height: 100dvh;
-            display: flex;
-            flex-direction: column;
             overflow: hidden;
         }
 
-        /* Top Nav - Clears Dynamic Island */
+        #app {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+
         #nav-bar {
-            flex-shrink: 0;
             background-color: var(--sidebar-bg);
             border-bottom: 1px solid var(--border);
             padding: 10px 15px;
@@ -73,13 +75,11 @@
             color: white;
         }
 
-        /* List Area */
         #content {
-            flex-grow: 1;
+            flex: 1;
             overflow-y: auto;
             padding: 20px;
-            /* Padding at the bottom so last items aren't hidden by the footer bar */
-            padding-bottom: 180px; 
+            padding-bottom: 220px; 
         }
 
         .entry-card {
@@ -102,21 +102,28 @@
             border: none;
             padding: 8px 12px;
             border-radius: 8px;
-            font-size: 12px;
         }
 
-        /* ANCHORED BOTTOM FOOTER */
+        /* THE COOL FLOATING ISLAND - MOVED DOWN BUT SAFE */
         #footer {
-            flex-shrink: 0;
-            background: rgba(24, 24, 24, 0.98);
-            border-top: 1px solid var(--border);
-            padding: 15px 20px;
-            /* This pushes the content just above the physical home bar */
-            padding-bottom: max(15px, env(safe-area-inset-bottom));
+            position: fixed;
+            /* Anchors it 10px above the safe area (home bar) */
+            bottom: calc(10px + env(safe-area-inset-bottom)); 
+            left: 50%;
+            transform: translateX(-50%);
+            width: 92%;
+            max-width: 450px;
+            background: rgba(30, 30, 30, 0.9);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            border: 1px solid var(--border);
+            border-radius: 24px;
+            padding: 16px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.6);
             display: flex;
             flex-direction: column;
             gap: 12px;
-            width: 100%;
+            z-index: 999;
         }
 
         .input-row {
@@ -128,8 +135,8 @@
             background: #000;
             border: 1px solid var(--border);
             color: white;
-            padding: 12px;
-            border-radius: 10px;
+            padding: 14px;
+            border-radius: 14px;
             font-size: 16px;
             flex: 1;
             min-width: 0;
@@ -139,20 +146,19 @@
             background: #ffffff;
             color: #000000;
             border: none;
-            padding: 14px;
-            border-radius: 10px;
+            padding: 16px;
+            border-radius: 14px;
             font-weight: bold;
             font-size: 16px;
-            width: 100%;
         }
 
-        .save-btn:active { background: #ccc; }
+        .save-btn:active { transform: scale(0.96); opacity: 0.8; }
 
     </style>
 </head>
 <body>
 
-<div id="app" style="height: 100%; display: flex; flex-direction: column;">
+<div id="app">
     <div id="nav-bar">
         <div id="planner-tabs"></div>
         <div style="color: var(--text-dim); font-size: 24px; padding-left: 10px;" onclick="createNewPlanner()">+</div>
@@ -165,18 +171,21 @@
 
     <div id="footer">
         <div class="input-row">
-            <input type="text" id="itemName" placeholder="Task name...">
+            <input type="text" id="itemName" placeholder="New assignment...">
             <input type="date" id="itemDate">
         </div>
-        <button class="save-btn" onclick="saveEntry()">Save Entry</button>
+        <button class="save-btn" onclick="saveEntry()">Add to List</button>
     </div>
 </div>
 
 <script>
-    let planners = JSON.parse(localStorage.getItem('myPlanners')) || ['Grades', 'Game Releases'];
+    let planners = JSON.parse(localStorage.getItem('myPlanners')) || ['Assignments', 'Game releases'];
     let entries = JSON.parse(localStorage.getItem('myEntries')) || [];
     let activePlanner = planners[0];
     const daysOfWeek = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
+
+    // Set default date to today so it's not "empty"
+    document.getElementById('itemDate').valueAsDate = new Date();
 
     function renderApp() {
         const tabsCont = document.getElementById('planner-tabs');
@@ -223,7 +232,6 @@
         entries.push(newEntry);
         localStorage.setItem('myEntries', JSON.stringify(entries));
         document.getElementById('itemName').value = '';
-        document.getElementById('itemDate').value = '';
         renderApp();
     }
 
