--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             --text-dim: #888888;
             --accent: #333333;
             --danger: #ff5555;
+            /* iPhone Corner Matching */
+            --iphone-radius: 38px; 
         }
 
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
@@ -33,16 +35,13 @@
             background-color: var(--bg-dark);
             color: var(--text-main);
             height: 100dvh;
+            display: flex;
+            flex-direction: column;
             overflow: hidden;
         }
 
-        #app {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-        }
-
         #nav-bar {
+            flex-shrink: 0;
             background-color: var(--sidebar-bg);
             border-bottom: 1px solid var(--border);
             padding: 10px 15px;
@@ -79,7 +78,7 @@
             flex: 1;
             overflow-y: auto;
             padding: 20px;
-            padding-bottom: 220px; 
+            padding-bottom: 240px; 
         }
 
         .entry-card {
@@ -102,33 +101,34 @@
             border: none;
             padding: 8px 12px;
             border-radius: 8px;
+            font-size: 12px;
         }
 
-        /* THE COOL FLOATING ISLAND - MOVED DOWN BUT SAFE */
+        /* IPHONE MATCHED FOOTER */
         #footer {
             position: fixed;
-            /* Anchors it 10px above the safe area (home bar) */
-            bottom: calc(10px + env(safe-area-inset-bottom)); 
-            left: 50%;
-            transform: translateX(-50%);
-            width: 92%;
-            max-width: 450px;
-            background: rgba(30, 30, 30, 0.9);
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
+            /* Nudged down to sit flush with the bottom curve */
+            bottom: max(10px, env(safe-area-inset-bottom)); 
+            left: 10px;
+            right: 10px;
+            background: rgba(30, 30, 30, 0.95);
+            backdrop-filter: blur(25px);
+            -webkit-backdrop-filter: blur(25px);
             border: 1px solid var(--border);
-            border-radius: 24px;
-            padding: 16px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.6);
+            /* Matched border radius */
+            border-radius: var(--iphone-radius);
+            padding: 24px 20px;
+            box-shadow: 0 -10px 40px rgba(0,0,0,0.4);
             display: flex;
             flex-direction: column;
             gap: 12px;
-            z-index: 999;
+            z-index: 1000;
         }
 
         .input-row {
             display: flex;
             gap: 10px;
+            width: 100%;
         }
 
         input {
@@ -136,7 +136,7 @@
             border: 1px solid var(--border);
             color: white;
             padding: 14px;
-            border-radius: 14px;
+            border-radius: 18px; /* Slightly more rounded inputs */
             font-size: 16px;
             flex: 1;
             min-width: 0;
@@ -147,12 +147,15 @@
             color: #000000;
             border: none;
             padding: 16px;
-            border-radius: 14px;
-            font-weight: bold;
+            border-radius: 18px;
+            font-weight: 800;
             font-size: 16px;
+            width: 100%;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
-        .save-btn:active { transform: scale(0.96); opacity: 0.8; }
+        .save-btn:active { transform: scale(0.97); background: #eee; }
 
     </style>
 </head>
@@ -171,7 +174,7 @@
 
     <div id="footer">
         <div class="input-row">
-            <input type="text" id="itemName" placeholder="New assignment...">
+            <input type="text" id="itemName" placeholder="New task...">
             <input type="date" id="itemDate">
         </div>
         <button class="save-btn" onclick="saveEntry()">Add to List</button>
@@ -183,9 +186,6 @@
     let entries = JSON.parse(localStorage.getItem('myEntries')) || [];
     let activePlanner = planners[0];
     const daysOfWeek = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
-
-    // Set default date to today so it's not "empty"
-    document.getElementById('itemDate').valueAsDate = new Date();
 
     function renderApp() {
         const tabsCont = document.getElementById('planner-tabs');
@@ -232,6 +232,7 @@
         entries.push(newEntry);
         localStorage.setItem('myEntries', JSON.stringify(entries));
         document.getElementById('itemName').value = '';
+        document.getElementById('itemDate').value = '';
         renderApp();
     }
 
