--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             --text-dim: #888888;
             --accent: #333333;
             --danger: #ff5555;
-            /* Ultra-smooth iPhone Corner */
-            --iphone-radius: 42px; 
+            /* Precise iPhone Corner Radius */
+            --iphone-radius: 44px; 
         }
 
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
@@ -78,7 +78,8 @@
             flex: 1;
             overflow-y: auto;
             padding: 20px;
-            padding-bottom: 240px; 
+            /* Room for the flush footer */
+            padding-bottom: 220px; 
         }
 
         .entry-card {
@@ -104,21 +105,21 @@
             font-size: 12px;
         }
 
-        /* FLUSH-MOUNTED IPHONE FOOTER */
+        /* THE FLUSH ISLAND */
         #footer {
             position: fixed;
-            /* Pulling it down slightly to match the bottom curve better */
-            bottom: calc(env(safe-area-inset-bottom) * 0.4); 
-            left: 8px;
-            right: 8px;
-            background: rgba(30, 30, 30, 0.96);
+            /* Pulled down to sit directly in the phone's bottom curve */
+            bottom: 6px; 
+            left: 6px;
+            right: 6px;
+            background: rgba(32, 32, 32, 0.98);
             backdrop-filter: blur(30px);
             -webkit-backdrop-filter: blur(30px);
             border: 1px solid var(--border);
             border-radius: var(--iphone-radius);
-            /* Extra bottom padding to keep button text away from swipe bar */
-            padding: 20px 20px calc(15px + env(safe-area-inset-bottom));
-            box-shadow: 0 -8px 30px rgba(0,0,0,0.5);
+            /* Internal spacing: Large bottom padding to keep button clear of swipe bar */
+            padding: 20px 20px calc(10px + env(safe-area-inset-bottom));
+            box-shadow: 0 -4px 30px rgba(0,0,0,0.6);
             display: flex;
             flex-direction: column;
             gap: 12px;
@@ -147,7 +148,7 @@
             color: #000000;
             border: none;
             padding: 16px;
-            border-radius: 20px;
+            border-radius: 22px;
             font-weight: 800;
             font-size: 15px;
             width: 100%;
@@ -155,7 +156,7 @@
             letter-spacing: 1px;
         }
 
-        .save-btn:active { transform: scale(0.97); background: #eee; }
+        .save-btn:active { transform: scale(0.96); background: #f0f0f0; }
 
     </style>
 </head>
