--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>DarkPlan Pro Planner</title>
     
     <link rel="icon" type="image/png" href="https://img.icons8.com/pulsar-line/48/ffffff/calendar.png">
     <link rel="apple-touch-icon" href="https://img.icons8.com/pulsar-line/180/ffffff/calendar.png">
     
     <meta name="theme-color" content="#121212">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <style>
         :root {
@@ -22,7 +20,7 @@
             --text-dim: #888888;
             --accent: #333333;
             --danger: #ff5555;
-            /* Heavy radius to match iPhone bezel */
+            /* Extra large radius to flow with the hardware curve */
             --iphone-radius: 50px; 
         }
 
@@ -34,7 +32,7 @@
             font-family: -apple-system, BlinkMacSystemFont, sans-serif;
             background-color: var(--bg-dark);
             color: var(--text-main);
-            height: 100dvh;
+            height: 100vh;
             display: flex;
             flex-direction: column;
             overflow: hidden;
@@ -44,8 +42,7 @@
             flex-shrink: 0;
             background-color: var(--sidebar-bg);
             border-bottom: 1px solid var(--border);
-            padding: 10px 15px;
-            padding-top: max(12px, env(safe-area-inset-top)); 
+            padding: 15px;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -78,8 +75,8 @@
             flex: 1;
             overflow-y: auto;
             padding: 20px;
-            /* Space so scrolling items don't hide behind footer */
-            padding-bottom: 260px; 
+            /* Room for the island */
+            padding-bottom: 240px; 
         }
 
         .entry-card {
@@ -93,9 +90,6 @@
             align-items: center;
         }
 
-        .entry-info b { display: block; font-size: 16px; margin-bottom: 4px; }
-        .entry-info span { font-size: 13px; color: var(--text-dim); }
-
         .remove-btn {
             background: rgba(255, 85, 85, 0.1);
             color: var(--danger);
@@ -105,30 +99,30 @@
             font-size: 12px;
         }
 
-        /* THE HARDWARE-MATCHED FOOTER */
+        /* HARD-CODED OFFSET FOOTER */
         #footer {
             position: fixed;
-            /* Manual override: Force it to sit only 10px from the absolute edge */
-            bottom: 10px; 
-            left: 10px;
-            right: 10px;
+            /* FIXED POSITION: Ignores safe zones */
+            bottom: 8px; 
+            left: 8px;
+            right: 8px;
             background: rgba(30, 30, 30, 0.98);
             backdrop-filter: blur(40px);
             -webkit-backdrop-filter: blur(40px);
             border: 1px solid var(--border);
             border-radius: var(--iphone-radius);
-            /* Internal padding: Keeps the button safe while the box stays low */
-            padding: 25px 25px calc(20px + env(safe-area-inset-bottom));
-            box-shadow: 0 -15px 40px rgba(0,0,0,0.8);
+            /* FIXED PADDING: This ensures the button is high enough to be tapped */
+            padding: 25px 25px 35px 25px;
+            box-shadow: 0 -10px 40px rgba(0,0,0,0.8);
             display: flex;
             flex-direction: column;
-            gap: 15px;
+            gap: 12px;
             z-index: 1000;
         }
 
         .input-row {
             display: flex;
-            gap: 12px;
+            gap: 10px;
             width: 100%;
         }
 
@@ -136,7 +130,7 @@
             background: #000;
             border: 1px solid var(--border);
             color: white;
-            padding: 15px;
+            padding: 14px;
             border-radius: 20px;
             font-size: 16px;
             flex: 1;
@@ -153,10 +147,10 @@
             font-size: 14px;
             width: 100%;
             text-transform: uppercase;
-            letter-spacing: 2px;
+            letter-spacing: 1.5px;
         }
 
-        .save-btn:active { transform: scale(0.96); opacity: 0.9; }
+        .save-btn:active { transform: scale(0.96); opacity: 0.8; }
 
     </style>
 </head>
@@ -183,7 +177,6 @@
 </div>
 
 <script>
-    // Using the "Grades" and "Game Releases" labels from your screenshots
     let planners = JSON.parse(localStorage.getItem('myPlanners')) || ['Grades', 'Game Releases'];
     let entries = JSON.parse(localStorage.getItem('myEntries')) || [];
     let activePlanner = planners[0];
