--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>DarkPlan Pro Planner</title>
     
     <style>
@@ -83,7 +84,7 @@
         #footer {
             position: fixed;
             /* Pushes the curve into the very bottom edge */
-            bottom: -2px; 
+            bottom: -8px; 
             left: 8px;
             right: 8px;
             background: rgba(30, 30, 30, 0.98);
