--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 </div>
 
 <script>
-    let planners = JSON.parse(localStorage.getItem('myPlanners')) || ['Grades', 'Assignments'];
+    let planners = JSON.parse(localStorage.getItem('myPlanners')) || ['Assignments', 'Game Releases'];
     let entries = JSON.parse(localStorage.getItem('myEntries')) || [];
     let activePlanner = planners[0];
 
