--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
             z-index: 1000;
         }
 
+        input[type="date"] {
+            color-scheme: dark;
+            position: relative;
+        }
+        
         /* Forces the date text to be visible on iOS */
         input[type="date"]::-webkit-date-and-time-value {
             text-align: left;
@@ -123,7 +128,7 @@
             <input type="date" id="itemDate">
         </div>
         <button class="save-btn" onclick="saveTask()">Add to List</button>
-        <div style="text-align:center; font-size: 9px; color: var(--text-dim); margin-top: -5px;">TAP ABOVE TO SAVE ENTRY</div>
+        <div style="text-align:center; font-size: 9px; color: var(--text-dim); margin-top: -5px;">USE THIS PLANNER FOR ANYTHING!</div>
     </div>
 </div>
 
