--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <input type="date" id="itemDate">
         </div>
         <button class="save-btn" onclick="saveTask()">Add to List</button>
-        <div style="text-align:center; font-size: 9px; color: var(--text-dim); margin-top: -5px;">USE THIS PLANNER FOR ANYTHING INCLUDING ASSIGNMENTS, GAME RELEASES AND MORE!</div>
+        <div style="text-align:center; font-size: 9px; color: var(--text-dim); margin-top: -5px;">Universal Planner</div>
     </div>
 </div>
 
