--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <div id="nav-bar">
         <div id="planner-tabs"></div>
         <div class="nav-actions">
-            <span class="action-text" onclick="toggleTheme()">Light?Dark Mode</span>
-            <span class="action-text" onclick="toggleCalendar()">Calendar View</span>
+            <span class="action-text" onclick="toggleTheme()">Theme</span>
+            <span class="action-text" onclick="toggleCalendar()">📅</span>
             <span class="action-text" style="font-size:18px;" onclick="createNewList()">+</span>
             <span class="logout-btn" onclick="handleLogout()">Sign Out</span>
         </div>
