--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div id="planner-tabs"></div>
         <div class="header-actions">
             <span onclick="createNewList()" style="font-size: 24px; cursor: pointer;">+</span>
-            <span onclick="auth.signOut()" class="out-btn">OUT</span>
+            <span onclick="auth.signOut()" class="out-btn"> SIGN OUT</span>
         </div>
     </div>
     
