--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div id="nav-bar">
         <div id="planner-tabs"></div>
         <div class="header-btns">
-            <span onclick="createNewList()" style="font-size: 24px; color: var(--text-dim); cursor: pointer;">+</span>
+            <span onclick="createNewList()" style="font-size: 24px; color: var(--text-dim); cursor: pointer; padding-right: 15px;">+</span>
             <div onclick="auth.signOut()" class="out-btn">SIGN OUT</div>
         </div>
     </div>
